# minetest

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Cargo.toml  Dockerfile  README.md  minetest.conf.example
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: build.yml  lua.yml
builtin/: settingtypes.txt
builtin/mainmenu/: dlg_create_world.lua  tab_about.lua
builtin/mainmenu/settings/: components.lua  dlg_settings.lua
cmake/Modules/: FindCURL.cmake  FindGMP.cmake  FindGettextLib.cmake  FindJson.cmake  FindLua.cmake  MinetestFindIrrlichtHeaders.cmake
doc/: Doxyfile.in  client_lua_api.md  lua_api.md  minetest.6  world_format.md
doc/compiling/: README.md  linux.md  windows.md
lib/bitop/: bit.cpp
lib/catch2/: catch.hpp
lib/irrlichtmt-server/include/: EDeviceTypes.h  EDriverTypes.h  IrrCompileConfig.h  IrrlichtDevice.h  SExposedVideoData.h  SIrrCreationParameters.h  irrTypes.h  irrlicht.h  irrpack.h  irrunpack.h
lib/jsoncpp/: jsoncpp.cpp
lib/jsoncpp/json/: json-forwards.h  json.h
lib/lua/: CMakeLists.txt
lib/lua/src/: luaconf.h
src/: CMakeLists.txt  activeobject.h  chat.cpp  chat.h  chat_interface.h  clientdynamicinfo.h  clientiface.cpp  clientiface.h  cmake_config.h.in  collision.cpp  config.h  content_nodemeta.cpp  convert_json.cpp  convert_json.h  craftdef.cpp  craftdef.h  debug.cpp  debug.h  defaultsettings.cpp  dummygamedef.h  emerge.cpp  emerge.h  environment.h  exceptions.h  filesys.cpp  filesys.h  gamedef.h  gameparams.h  gettext.cpp  gettext.h  gettime.h  httpfetch.cpp  httpfetch.h  hud.h  inventory.cpp  inventory.h  inventorymanager.cpp  inventorymanager.h  irr_aabb3d.h  irr_ptr.h  (+75 more)
src/client/: clientlauncher.cpp  game.cpp  hud.cpp  inputhandler.cpp  inputhandler.h  renderingengine.cpp  renderingengine.h
src/client/sound/: al_helpers.h
src/content/: content.cpp  content.h  mod_configuration.cpp  mod_configuration.h  mods.cpp  mods.h  subgames.cpp  subgames.h
src/database/: CMakeLists.txt  database-postgresql.cpp  database-sqlite3.cpp  database-sqlite3.h  database.h
src/gui/: CMakeLists.txt  guiEngine.cpp  guiFormSpecMenu.cpp  guiFormSpecMenu.h  guiInventoryList.cpp  guiPasswordChange.cpp  guiPasswordChange.h  guiTable.cpp  modalMenu.cpp  modalMenu.h
src/irrlicht/: CMakeLists.txt  IrrCompileConfig.h  SColor.h  aabbox3d.h  irrMath.h  irrString.h  irrTypes.h  matrix4.h  printing.h  quaternion.h
src/irrlicht_changes/: CGUITTFont.cpp  CGUITTFont.h  printing.h
src/mapgen/: CMakeLists.txt  cavegen.cpp  cavegen.h  dungeongen.cpp  mapgen.cpp  mapgen.h  mg_schematic.cpp  mg_schematic.h  treegen.cpp  treegen.h
src/network/: CMakeLists.txt  address.cpp  address.h  clientpackethandler.cpp  connection.cpp  connection.h  connectionthreads.cpp  networkexceptions.h  networkpacket.cpp  networkpacket.h  networkprotocol.h  serveropcodes.h  serverpackethandler.cpp  socket.cpp
src/script/: scripting_mainmenu.cpp  scripting_mainmenu.h  scripting_server.cpp  scripting_server.h
src/script/common/: c_content.cpp  c_content.h  c_converter.cpp  c_converter.h  c_internal.cpp  c_internal.h  c_packer.cpp  c_packer.h  c_types.h  helper.cpp
src/script/cpp_api/: s_async.cpp  s_async.h  s_base.cpp  s_base.h  s_client.cpp  s_client.h  s_entity.cpp  s_entity.h  s_env.cpp  s_env.h  s_internal.h  s_inventory.cpp  s_inventory.h  s_item.cpp  s_mainmenu.cpp  s_mainmenu.h  s_modchannels.cpp  s_modchannels.h  s_node.cpp  s_node.h  s_player.cpp  s_player.h  s_security.cpp  s_security.h  s_server.cpp  s_server.h
src/script/lua_api/: l_areastore.cpp  l_areastore.h  l_auth.cpp  l_base.cpp  l_base.h  l_client.cpp  l_craft.cpp  l_craft.h  l_env.cpp  l_env.h  l_http.cpp  l_http.h  l_internal.h  l_inventory.cpp  l_item.cpp  l_itemstackmeta.cpp  l_itemstackmeta.h  l_mainmenu.cpp  l_mapgen.cpp  l_metadata.cpp  l_metadata.h  l_modchannels.cpp  l_modchannels.h  l_nodemeta.cpp  l_nodemeta.h  l_object.cpp  l_particles.cpp  l_playermeta.cpp  l_playermeta.h  l_rollback.cpp  l_server.cpp  l_server.h  l_settings.cpp  l_settings.h  l_storage.cpp  l_storage.h  l_util.cpp
src/server/: luaentity_sao.cpp  luaentity_sao.h  mods.cpp  mods.h  player_sao.cpp  player_sao.h  serveractiveobject.cpp  serveractiveobject.h  serverinventorymgr.cpp  serverinventorymgr.h  unit_sao.cpp  unit_sao.h
src/threading/: semaphore.cpp  semaphore.h  thread.cpp  thread.h
src/unittest/: CMakeLists.txt  test.cpp  test.h  test_areastore.cpp  test_authdatabase.cpp  test_compression.cpp  test_connection.cpp  test_craft.cpp  test_filesys.cpp  test_gettext.cpp  test_inventory.cpp  test_lua.cpp  test_map_settings_manager.cpp  test_modstoragedatabase.cpp  test_moveaction.cpp  test_schematic.cpp  test_serialization.cpp  test_servermodmanager.cpp  test_settings.cpp  test_socket.cpp  test_utilities.cpp
src/util/: areastore.cpp  areastore.h  auth.cpp  auth.h  base64.cpp  base64.h  enriched_string.cpp  enriched_string.h  hex.h  ieee_float.cpp  md32_common.h  metricsbackend.cpp  metricsbackend.h  numeric.h  png.cpp  png.h  pointedthing.cpp  pointedthing.h  quicktune.cpp  quicktune.h  quicktune_shortcutter.h  serialize.cpp  serialize.h  srp.cpp  stream.h  string.cpp  string.h  thread.h  timetaker.cpp  timetaker.h
util/buildbot/: common.sh
util/ci/: build.sh  clang-tidy.sh  common.sh
